added offer endpoints
