# src/models/offer-model.ts
@@ -1,0 +1,11 @@
+export default interface Offer {
+    id?: number,
+    description?: string,
+    numberOfAdults?: number,
+    numberOfKids?: number,
+    numberOfRooms?: number,
+    numberOfBeds?: number,
+    area?: number,
+    value?: number,
+    idAccomodation?: number,
+}
